# assert_llm_tools

./: .coverage.Mac.localdomain.44054.XnDBKjUx  .gitignore  CACHING_IMPLEMENTATION.md  CHANGELOG_PHASE1.md  CLAUDE.md  SUMMARIZATION_METRICS_ASSESSMENT.md  finetune_comet.py  pyproject.toml  pytest.ini  readme.md  test_custom_framework_loading.py  test_custom_instructions.py  test_docs.py  test_evaluate_note.py  test_evaluate_note_live.py  test_llm_config_validate.py  test_meeting_type.py  test_new_metrics.py  test_pii_masking.py
.github/workflows/: ci-assert-core.yml  ci-assert-eval.yml  ci-assert-review.yml  publish-assert-core.yml  publish-assert-eval.yml  publish-assert-review.yml  python-publish.yml  security.yml  test.yaml  tests.yml
assert_llm_tools/: __init__.py  cli.py  core.py  utils.py
assert_llm_tools/frameworks/: fca_wealth.yaml  mifid_ii.yaml
assert_llm_tools/llm/: bedrock.py  config.py  openai.py
assert_llm_tools/metrics/: base.py
assert_llm_tools/metrics/note/: __init__.py  evaluate_note.py  loader.py  models.py
assert_llm_tools/metrics/rag/: context_relevance.py  faithfulness.py
assert_llm_tools/metrics/summary/: coherence.py  coverage.py  factual_alignment.py  factual_consistency.py  redundancy.py
docs/: api-reference.md  custom-frameworks.md  security-review.md
examples/: README.md
examples/fca_suitability_v1/: compliant_note.txt  compliant_note_expected.json  minor_gaps_note.txt  minor_gaps_note_expected.json  non_compliant_note.txt  non_compliant_note_expected.json
tests/: README.md  conftest.py  test_cli.py  test_config.py  test_evaluation_engine.py  test_gap_report_serialization.py  test_loader.py  test_models.py  test_pass_policy.py
tests/functional/: test_end_to_end.py
tests/integration/: test_rag_core.py  test_summary_core.py  test_summary_evaluation.py
tests/unit/: test_base_llm.py  test_bleu.py  test_config.py  test_rouge.py  test_utils.py
tests/unit/llm/: test_config.py  test_openai.py
tests/unit/metrics/summary/: test_rouge.py
