[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assert_llm"
version = "0.0.1"
description = "Automated Summary Scoring & Evaluation of Retained Text"
authors = [
    {name = "Charlie Douglas", email = "cdouglas@gmail.com"},
]
dependencies = [
    "requests>=2.28.0",
    "rouge-score==0.1.2",
    "nltk==3.9.1",
    # Add your dependencies here
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    # Add development dependencies here
]