[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assert_llm_tools"
version = "0.1.2"
description = "Automated Summary Scoring & Evaluation of Retained Text"
authors = [
    {name = "Charlie Douglas", email = "cdouglas@gmail.com"},
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.3.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "bert-score>=0.3.13",
    "torch>=2.5.1",
    "transformers>=4.30.0",
    "evaluate>=0.4.0",
    "nltk>=3.8",
    "rouge-score>=0.1.2",
    "huggingface_hub>=0.20.0",
    "tqdm>=4.66.6",
    "protobuf==4.24.4",
    "tiktoken>=0.8.0",
    "sentence-transformers>=3.2.1",
    "unbabel-comet>=2.2.4",
]
requires-python = ">=3.8"

[project.optional-dependencies]

# Testing dependencies
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pydantic>=2.0.0",  # Ensure pydantic v2+ for model_validator
]

# Development dependencies (includes testing + additional tools)
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0", 
    "pytest-mock>=3.10.0",
    "black>=23.1.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

bedrock = [
    "boto3>=1.28.0",
]
openai = [
    "openai>=1.53.0",
]
all = [
    "boto3>=1.35.53",
    "openai>=1.53.0",
]

[project.urls]
"Homepage" = "https://github.com/charliedouglas/assert"
"Bug Tracker" = "https://github.com/charliedouglas/assert/issues"

[tool.setuptools]
packages = [
    "assert_llm_tools",
    "assert_llm_tools.metrics.summary",
    "assert_llm_tools.metrics.rag",
    "assert_llm_tools.llm" 
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "functional: Functional/end-to-end tests",
    "slow: Slow running tests that may be skipped during quick runs",
]