[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "assert_llm_tools"
version = "0.9.5"
description = "Automated Summary Scoring & Evaluation of Retained Text"
authors = [
    {name = "Charlie Douglas", email = "cdouglas@gmail.com"},
]
readme = "readme.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "anthropic>=0.3.0",
    "openai>=1.0.0",
    "python-dotenv>=0.19.0",
    "tiktoken==0.8.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "flake8>=4.0.0",
    "build>=0.10.0",
    "twine>=4.0.0",
]
bedrock = [
    "boto3>=1.28.0",
]
openai = [
    "openai>=1.53.0",
]
all = [
    "boto3>=1.28.0",
    "openai>=1.53.0",
]

[project.urls]
"Homepage" = "https://github.com/charliedouglas/assert"
"Bug Tracker" = "https://github.com/charliedouglas/assert/issues"

[tool.setuptools]
packages = [
    "assert_llm_tools",
    "assert_llm_tools.metrics",
    "assert_llm_tools.metrics.summary",
    "assert_llm_tools.llm"
]
